Vorbis encoding is broken #37198

Closed
opened 2013-10-24 07:40:05 +02:00 by Shinsuke Irie · 14 comments
Member

%%%--- Operating System, Graphics card ---

Ubuntu 13.10 amd64 + GeForce GTX670

- Blender version with error, and version that worked ---

2.69 RC3 (official build)
r60907 (own build)

- Short description of error ---

The vorbis encoding seems broken.
Audio track in .ogg file (theora+vorbis) made by Blender cannot be played properly with a media player.
I confirmed that both 2.69RC3 and own build cause the problem.

2.69RC3:

  • Encoding ... no error
  • Playing ... some media player such as VLC and Totem causes frequent sound jumpiness

own build (r60907):

  • Encoding ... "Error writing audio packet!" in console
  • Playing ... error for lack of audio data happens, no sound at all

I'm not sure if this is Blender's bug, but at least I can make proper .ogg files by using command line avconv tool.
%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.10 amd64 + GeForce GTX670 - Blender version with error, and version that worked --- 2.69 RC3 (official build) r60907 (own build) - Short description of error --- The vorbis encoding seems broken. Audio track in .ogg file (theora+vorbis) made by Blender cannot be played properly with a media player. I confirmed that both 2.69RC3 and own build cause the problem. 2.69RC3: - Encoding ... no error - Playing ... some media player such as VLC and Totem causes frequent sound jumpiness own build (r60907): - Encoding ... "Error writing audio packet!" in console - Playing ... error for lack of audio data happens, no sound at all I'm not sure if this is Blender's bug, but at least I can make proper .ogg files by using command line avconv tool. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Errors which you see with own builds might be caused by you using newer FFmpeg where API might have been changed.

As for official builds -- it happens with previous release as well, and could be caused by totem using gstreamer instead of FFmpeg. Both blender and ffplay are playing the file nicely.%%%

%%%Errors which you see with own builds might be caused by you using newer FFmpeg where API might have been changed. As for official builds -- it happens with previous release as well, and could be caused by totem using gstreamer instead of FFmpeg. Both blender and ffplay are playing the file nicely.%%%

%%%Actually, will look into this eventually.%%%

%%%Actually, will look into this eventually.%%%
Author
Member

%%%MPlayer shows the following message in console:

Too many audio packets in the buffer: (4096 in 1082704 bytes).
Maybe you are playing a non-interleaved stream/file or the codec failed?
For AVI files, try to force non-interleaved mode with the -ni option.

In MPlayer, audio track can be played with proper speed, but video track gets strange speed instead.
Note that the MPlayer uses FFmpeg/Libav for Vorbis playback.
%%%

%%%MPlayer shows the following message in console: Too many audio packets in the buffer: (4096 in 1082704 bytes). Maybe you are playing a non-interleaved stream/file or the codec failed? For AVI files, try to force non-interleaved mode with the -ni option. In MPlayer, audio track can be played with proper speed, but video track gets strange speed instead. Note that the MPlayer uses FFmpeg/Libav for Vorbis playback. %%%

Added subscriber: @schlaile

Added subscriber: @schlaile

@IRIEShinsuke, glanced in the issue right now. It might be related on non-monotonic PTS for the frames. At least because of this non-monotonic thing FFmpeg-2.0.2 doesn't work.

Will look further later today (need to go for some uni stuff now). Or will ask @schlaile to help me.

@IRIEShinsuke, glanced in the issue right now. It might be related on non-monotonic PTS for the frames. At least because of this non-monotonic thing FFmpeg-2.0.2 doesn't work. Will look further later today (need to go for some uni stuff now). Or will ask @schlaile to help me.
Author
Member

Any update on this?

Anyway, why are we using ancient FFmpeg still? The official builds use v1.0 on Linux and v0.10 on Windows, though the upstream release has already moved to v2.1 branch. Such old libraries have many bugs (including security vulnerabilities), so they should be updated as soon as possible.

Any update on this? Anyway, why are we using ancient FFmpeg still? The official builds use v1.0 on Linux and v0.10 on Windows, though the upstream release has already moved to v2.1 branch. Such old libraries have many bugs (including security vulnerabilities), so they should be updated as soon as possible.

No update yet. It is in my list of review for the next week.

No update yet. It is in my list of review for the next week.

This issue was referenced by blender/blender-addons-contrib@1ace875391

This issue was referenced by blender/blender-addons-contrib@1ace8753918b9cf067db75921fdb8d246abdd2e8

This issue was referenced by 1ace875391

This issue was referenced by 1ace8753918b9cf067db75921fdb8d246abdd2e8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1ace875391.

Closed by commit 1ace875391.

Commited the fix which seems to work here. Further testing is appreciated.

Commited the fix which seems to work here. Further testing is appreciated.
Author
Member

Tested with FFmpeg 2.0.2 and 2.1.3. Totem, MPlayer, and VLC could correctly play movie files that the Vorbis encoder was used.

Thanks for the fix!

Tested with FFmpeg 2.0.2 and 2.1.3. Totem, MPlayer, and VLC could correctly play movie files that the Vorbis encoder was used. Thanks for the fix!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37198
No description provided.